refactor: improve input handling and resource management in Graphene components